# pjimg

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: static.yml
docs/source/: conf.py  imgblend.rst  imgease.rst  imgfilt.rst  imggen.rst  index.rst  requirements.rst  sources.rst  util.rst
examples/blends/: blender.py  build_doc_images.py
examples/eases/: build_doc_images.py
examples/filters/: build_doc_images.py
examples/imgblend/: blender.py  build_doc_images.py
examples/imgease/: build_doc_images.py
examples/imgfilt/: build_doc_images.py
examples/imggen/: build_doc_images.py  noisy.py
examples/imgio/: make_color_fade.py  make_spacer.py
examples/pjimg/: mazer.py  modister.py  patdister.py  test.py
examples/sources/: build_doc_images.py  build_test_fill.py  noisy.py
examples/util/: resize_image.py
src/pjimg/: __init__.py  pjimg.py
tests/: common.py  fixtures.py  spam.py  test_pjimg.py
tests/test_blends/: rebuild_data.py  test_decorators.py  test_examples.py  test_ops.py
tests/test_eases/: test_decorators.py  test_imgeases.py
tests/test_filters/: test_affine.py  test_blurs.py  test_decorators.py  test_distort.py  test_filts.py
tests/test_imgblend/: rebuild_data.py  test_decorators.py  test_examples.py  test_ops.py
tests/test_imgease/: test_decorators.py  test_imgeases.py
tests/test_imgfilt/: test_decorators.py  test_filts.py
tests/test_imggen/: build_data.py  test_examples.py  test_maze.py  test_model.py  test_noise.py  test_patterns.py  test_perlin.py  test_unitnoise.py  test_worley.py
tests/test_imgio/: test_examples.py  test_reader.py  test_writer.py
tests/test_sources/: build_data.py  test_examples.py  test_maze.py  test_model.py  test_noise.py  test_patterns.py  test_perlin.py  test_tile.py  test_unitnoise.py  test_worley.py
tests/test_util/: test_debug.py  (+6 more)
(+84 files in other folders)
