[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rstcheck]
report_level = "WARNING"
ignore_directives = ["autoclass", "autofunction"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib",]
markers = ['codec', 'ext', 'path',]

[project]
name = "pjimg"
version = "0.0.1"
authors = [
    {name="Paul J. Iutzi", email="pji@mac.com"},
]
description = "Procedural pattern and noise generation."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
# "Homepage" = "https://pjimg.readthedocs.io/en/latest/index.html#"
# "Documentation" = "https://pjimg.readthedocs.io/en/latest/index.html#"
"Source" = "https://github.com/pji/pjimg"

# [project.scripts]
# filereader = "{SCRIPT_FILE}:{FUNCTION_NAME}"
